12-kubernetes/1/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wcg
  namespace: maxmax-wcg
spec:
  selector:
    app: wcg
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
